--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,10 +7,20 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <%= yield %>
 
   <% if !!current_user %>
-    <%= button_to "Sign Out", session_url, method: :delete %>
+    <div class="header animated fadeInRight">
+      <form action="http://localhost:3000/session" class="button_to" method="post">
+        <input name="_method" type="hidden" value="delete">
+        <button class="signout" type="submit">
+          <i class="fa fa-sign-out"></i>
+          Sign out
+        </button>
+        <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>">
+      </form>
+    </div>
   <% end %>
+
+  <%= yield %>
 </body>
 </html>
