--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,12 +10,14 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *= require animate
+ *= require gh-fork-ribbon
  *= require_tree .
  *= require_self
  */
 
 @import "font-awesome";
 @import url(http://fonts.googleapis.com/css?family=Oxygen:400,300);
+
 
 
 $brand-bg: #FFFBF0;
@@ -152,4 +154,8 @@ a.project {
       text-decoration: none;
     }
   }
+}
+
+.right-bottom .github-fork-ribbon a {
+  background-color: $brand-primary;
 }
