--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,6 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
   <% if !!current_user %>
     <div class="header animated fadeInRight">
       <form action="/session" class="button_to" method="post">
@@ -22,5 +21,10 @@
   <% end %>
 
   <%= yield %>
+  <div class="github-fork-ribbon-wrapper right-bottom">
+    <div class="github-fork-ribbon">
+      <a href="https://github.com/w1zeman1p/jects/fork">Fork me on GitHub</a>
+    </div>
+  </div>
 </body>
 </html>
