can upvote and unvote all

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -159,3 +159,8 @@ a.project {
 .right-bottom .github-fork-ribbon a {
   background-color: $brand-primary;
 }
+
+#votes {
+  margin-top: 50px;
+  text-align: center;
+}
