--- a/app/assets/templates/projects/layout.jst.ejs
+++ b/app/assets/templates/projects/layout.jst.ejs
@@ -1,5 +1,9 @@
 <div id="projects" class="column left-column">
 </div>
 
-<div id="project" class="column right-column">
+<div class="column right-column">
+  <div id="project">
+  </div>
+  <div id="votes"></div>
 </div>
+
