--- a/app/assets/templates/projects/item.jst.ejs
+++ b/app/assets/templates/projects/item.jst.ejs
@@ -1,3 +1,4 @@
+<a class="upvote"><i class="fa fa-facebook"></i></a>
 <a class="title project project-url" href="<%= project.get('url') %>">
   <i class="fa fa-external-link"></i>
   <%= project.escape('title') %>
