--- a/app/assets/templates/votes/index.jst.ejs
+++ b/app/assets/templates/votes/index.jst.ejs
@@ -1,2 +1,5 @@
 <strong><%= votesLeft %></strong> Votes Left! 
-<button class="unvote">Unvote!</button>
+<button class="unvote">
+  <i class="fa fa-undo"></i>
+  Unvote!
+</button>
