adding repos to cache the repo list from the users github

--- a/app/assets/templates/projects/edit.jst.ejs
+++ b/app/assets/templates/projects/edit.jst.ejs
@@ -1,3 +1,7 @@
 <input type="text" class="input-huge" name="title" value="<%= project.escape('title') %>" autofocus="autofocus" onfocus="this.value = this.value;"><br>
 <input type="text"  class="input-huge" name="url" value="<%= project.escape('url') %>"><br>
-<input type="text"  class="input-huge" name="gitrepo" value="<%= project.escape('gitrepo') %>"><br>
+<select name="gitrepo" class="input-huge">
+  <% _(Jects.repos).each(function (repo) { %>
+    <option><%= repo %></option>
+  <% }) %>
+</select>
