--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -3,6 +3,7 @@
   var UID = '<%= current_user.id %>';
   Jects.projects.set(<%= Project.all.to_json.html_safe %>);
   Jects.votes.set(<%= current_user.votes.to_json.html_safe %>);
+  Jects.repos = <%= current_user.repos.pluck(:name).to_json.html_safe %>
 </script>
 
 <main id="main"></main>
