--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -31,17 +31,25 @@ $brand-primary-hover: lighten($brand-primary, 20);
   background-color: $brand-bg;
 }
 
+html, body {
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+
 .input-huge {
   height: 60px;
   font-size: 30px;
   line-height: 35px;
   border: none;
+  border-radius: 0px;
   border-bottom: thin dotted;
   outline: none;
   margin: 5px;
   width: 95%;
 }
 
+/* how to make this responsive? @media something */
 .column {
   position: relative;
   float: left;
@@ -59,6 +67,7 @@ $brand-primary-hover: lighten($brand-primary, 20);
   padding: 20px;
 }
 
+/* probably could have a better name */
 .item {
   white-space: nowrap;
 }
@@ -227,8 +236,3 @@ a.project {
   }
 }
 
-html, body {
-  width: 100%;
-  height: 100%;
-  position: relative;
-}
