--- a/app/assets/templates/projects/edit.jst.ejs
+++ b/app/assets/templates/projects/edit.jst.ejs
@@ -10,4 +10,4 @@
   <% }) %>
 </select>
 
-<a class="input-huge">Checklist Me!</a>
+<a class="btn" alt="This generates a final project checklist for you">Checklist Me!</a>
