working on the create issues button

--- a/app/assets/templates/projects/edit.jst.ejs
+++ b/app/assets/templates/projects/edit.jst.ejs
@@ -10,4 +10,7 @@
   <% }) %>
 </select>
 
-<a class="btn" alt="This generates a final project checklist for you">Checklist Me!</a>
+<a class="btn" alt="This generates a final project checklist for you">
+  <i class="fa fa-check"></i>
+  Checklist Me!
+</a>
