--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -102,6 +102,10 @@ li.mine {
   }
 }
 
+#project {
+  z-index: 100;
+}
+
 a.project {
   margin: 5px;
   text-decoration: none;
@@ -170,6 +174,7 @@ a.project {
 }
 
 .btn {
+  cursor: pointer;
   font-size: 13px;
   line-height: 17px;
   border: thin dotted;
