adding refreshing of repos

--- a/app/assets/templates/projects/edit.jst.ejs
+++ b/app/assets/templates/projects/edit.jst.ejs
@@ -10,7 +10,12 @@
   <% }) %>
 </select>
 
-<a class="btn" alt="This generates a final project checklist for you">
+<a class="btn checklist" alt="This generates a final project checklist for you">
   <i class="fa fa-check"></i>
-  Checklist Me!
+  Generate checklist as github issues for this repo!
+</a>
+
+<a class="btn refresh">
+  <i class="fa fa-refresh"></i>
+  Reload my repo list
 </a>
