--- a/app/assets/templates/projects/layout.jst.ejs
+++ b/app/assets/templates/projects/layout.jst.ejs
@@ -1,9 +1,2 @@
-<div id="projects" class="column left-column">
-</div>
-
-<div class="column right-column">
-  <div id="project">
-  </div>
-  <div id="votes"></div>
-</div>
-
+<div id="projects" class="col-md-8 col-lg-8 col-md-offset-2 col-lg-offset-2"></div>
+<div id="votes" class="col-md-2 col-lg-2"></div>
