--- a/app/assets/templates/votes/index.jst.ejs
+++ b/app/assets/templates/votes/index.jst.ejs
@@ -1,5 +1,6 @@
-<strong><%= votesLeft %></strong> Votes Left! 
-<button class="unvote">
+<h4><strong><%= votesLeft %></strong> Votes Left!</h4>
+
+<button class="unvote btn btn-primary btn-sm">
   <i class="fa fa-undo"></i>
   Unvote!
 </button>
