--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,201 +14,15 @@
  *= require_self
  */
 
+@import "bootstrap";
 @import "font-awesome";
 @import url(http://fonts.googleapis.com/css?family=Oxygen:400,300);
-
-/* variables */
-$brand-bg: #FFFBF0;
-$brand-bg-hover: darken($brand-bg, 10);
-$brand-secondary: #3F5666;
-$brand-secondary-visited: darken($brand-secondary, 50);
-$brand-secondary-hover: #2F3440;
-$brand-primary: #F23E2C;
-$brand-primary-hover: lighten($brand-primary, 20);
-
-/* splash page/sign in */
-@import "welcome";
-
-/* site wide */
-* {
-  font-family: 'Oxygen', sans-serif;
-  background-color: $brand-bg;
-}
-
-html, body {
-  width: 100%;
-  height: 100%;
-  position: relative;
-}
-
-.right-bottom .github-fork-ribbon a {
-  background-color: $brand-primary;
-}
-
-.input-huge {
-  height: 60px;
-  font-size: 30px;
-  line-height: 35px;
-  border: none;
-  border-radius: 0px;
-  border-bottom: thin dotted;
-  outline: none;
-  margin: 5px;
-  width: 95%;
-}
-
-/* grid system */
-/* how to make this responsive? @media something */
-.column {
-  position: relative;
-  float: left;
-  width: 46%;
-  height: 100%;
-}
-
-.left-column {
-  position: absolute;
-  height: 100%;
-}
-
-.right-column {
-  margin-left: 50%;
-  padding: 20px;
-}
-
-/* probably could have a better name */
-.item {
-  white-space: nowrap;
-}
-
-/* project directory */
-/* TODO: move to directory.scss */
-li.mine {
+.github-fork-ribbon {
+  background-color: #0045AA;
   a {
-    font-size: 21px;
-    white-space: nowrap;
-    color: $brand-primary;
+    border: none;
     &:hover {
-      color: $brand-primary-hover;
-      text-decoration: underline;
-    }
-    &:visited {
-      color: $brand-primary;
-      &:hover {
-        color: $brand-primary-hover;
-        text-decoration: underline;
-      }
-    }
-  }
-}
-
-#project {
-  z-index: 100;
-}
-
-a.project {
-  margin: 5px;
-  text-decoration: none;
-  border: none;
-  outline: none;
-  right: 0px;
-  color: $brand-secondary;
-  &:hover {
-    color: $brand-secondary-hover;
-    text-decoration: underline;
-  }
-  &:visited {
-    color: $brand-secondary;
-  }
-}
-
-.project-github {
-  font-size: 18px;
-  line-height: 20px;
-}
-
-.project-url {
-  font-size: 20px;
-  line-height: 25px;
-}
-
-.projects {
-  height: 100%;
-  left: 0;
-  top: 0;
-  position: absolute;
-  list-style: none;
-  overflow-y: scroll;
-}
-
-.header {
-  display: flex;
-  justify-content: flex-end;
-  .errors {
-    &.hidden {
-      display: none;
-      visibility: hidden;
-    }
-    background-color: red;
-    margin: auto;
-    width: 50%;
-    padding: 10px;
-    border-radius: 3px;
-  }
-  .signout {
-    margin-right: 40px;
-    font-size: 13px;
-    line-height: 17px;
-    border: thin dotted;
-    border-radius: 2px;
-    outline: none;
-    text-decoration: none;
-    color: $brand-primary;
-    &:hover {
-      color: $brand-primary-hover;
-    }
-    &:visited {
-      text-decoration: none;
-    }
-  }
-}
-
-.btn {
-  cursor: pointer;
-  font-size: 13px;
-  line-height: 17px;
-  border: thin dotted;
-  border-radius: 2px;
-  outline: none;
-  text-decoration: none;
-  padding: 5px;
-  color: $brand-primary;
-  &:hover {
-    color: $brand-primary-hover;
-  }
-  &:visited {
-    text-decoration: none;
-  }
-}
-
-
-#votes {
-  margin-top: 80px;
-  text-align: center;
-
-  .unvote {
-    font-size: 13px;
-    line-height: 17px;
-    border: thin dotted;
-    border-radius: 2px;
-    outline: none;
-    text-decoration: none;
-    color: $brand-primary;
-    &:hover {
-      color: $brand-primary-hover;
-    }
-    &:visited {
-      text-decoration: none;
+      border: none;
     }
   }
 }
