--- a/app/assets/templates/projects/item.jst.ejs
+++ b/app/assets/templates/projects/item.jst.ejs
@@ -1,19 +1,3 @@
-<% if(!Jects.votes.findWhere({ project_id: project.id })) { %>
-<a class="upvote">
-  <% if(project.get('votes_count') > 0) {  %>
-    <%= project.get('votes_count') %>
-  <% } %>
-  <i class="fa fa-thumbs-o-up"></i>
-</a>
-<% } else { %>
-<a class="upvote">
-  <% if(project.get('votes_count') > 0) {  %>
-    <%= project.get('votes_count') %>
-  <% } %>
-  <i class="fa fa-star"></i>
-</a>
-<% } %>
-
 <a class="title project project-url" href="http://<%= project.get('url') %>">
   <i class="fa fa-external-link"></i>
   <%= project.escape('title') %>
@@ -25,3 +9,18 @@
   <i class="fa fa-github"></i>
   <%= project.escape('gitrepo') %>
 </a>
+
+<% if(!Jects.votes.findWhere({ project_id: project.id })) { %>
+<a class="upvote pull-right">
+  <i class="fa fa-thumbs-o-up"></i>
+</a>
+<% } else { %>
+<a class="upvote pull-right">
+  <i class="fa fa-star"></i>
+</a>
+<% } %>
+
+<% if(project.get('votes_count') > 0) {  %>
+  <span class="badge"><%= project.get('votes_count') %></span>
+<% } %>
+
