--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -1,9 +1,47 @@
-<script>
-  $(Jects.initialize);
-  var UID = '<%= current_user.id %>';
-  Jects.projects.set(<%= Project.all.to_json.html_safe %>);
-  Jects.votes.set(<%= current_user.votes.to_json.html_safe %>);
-  Jects.repos = <%= current_user.repos.pluck(:name).to_json.html_safe %>
-</script>
+<nav class="navbar navbar-default" role="navigation">
+<div class="container-fluid">
+  <!-- Brand and toggle get grouped for better mobile display -->
+  <div class="navbar-header">
+    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+      <span class="sr-only">Toggle navigation</span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+    </button>
+    <a class="navbar-brand" href="#">Final Projects</a>
+  </div>
 
-<main id="main"></main>
+  <!-- Collect the nav links, forms, and other content for toggling -->
+  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+    <ul class="nav navbar-nav">
+      <li class="active"><a href="#">All Projects</a></li>
+      <li><a href="#/project">My Project</a></li>
+    </ul>
+    <% if !!current_user %>
+    <form action="/session" class="button_to navbar-form navbar-right" method="post">
+      <input name="_method" type="hidden" value="delete">
+      <button class="signout btn btn-default" type="submit">
+        <i class="fa fa-sign-out"></i>
+        Sign out
+      </button>
+      <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>">
+    </form>
+    <% end %>
+
+  </div><!-- /.navbar-collapse -->
+</div><!-- /.container-fluid -->
+</nav>
+
+<% content_for :scripts do %>
+  <script>
+    $(Jects.initialize);
+    var UID = '<%= current_user.id %>';
+    var PID = '<%= current_user.project.id %>';
+    Jects.votes.set(<%= current_user.votes.to_json.html_safe %>);
+    Jects.repos = <%= current_user.repos.pluck(:name).to_json.html_safe %>
+  </script>
+<% end %>
+
+<div class="container">
+  <main id="main"></main>
+</div>
