--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,13 +10,15 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *= require animate
+ *= require bootstrap.min
  *= require gh-fork-ribbon
  *= require_self
  */
 
-@import "bootstrap";
 @import "font-awesome";
+
 @import url(http://fonts.googleapis.com/css?family=Oxygen:400,300);
+
 .github-fork-ribbon {
   background-color: #0045AA;
   a {
