--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -13,10 +13,12 @@
 
   <!-- Collect the nav links, forms, and other content for toggling -->
   <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-    <ul class="nav navbar-nav">
-      <li class="active"><a href="#">All Projects</a></li>
-      <li><a href="#/project">My Project</a></li>
-    </ul>
+    <div id="links">
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="#">All Projects</a></li>
+        <li><a href="#/project">My Project</a></li>
+      </ul>
+    </div>
     <% if !!current_user %>
     <form action="/session" class="button_to navbar-form navbar-right" method="post">
       <input name="_method" type="hidden" value="delete">
